--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
-    
+    <section class="error-section">
+        <div class="error-container">
+            <h1 class="error-title">404 NOT Found</h1>
+            <div class="error">
+                <div>
+                    <img class="error-img" src="./images/Scarecrow.png" alt="">
+                </div>
+                <div class="error-containt">
+                    <div>
+                        <h1 class="error-title-2">I have a Bad news for you</h1>
+                        <p class="error-details">The Page You are looking for might be remove or is temporaily
+                            unavailable
+                        </p>
+                        <button class="btn">
+                            Back To Homepage
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <p>Re created by KHaaN</p>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
